update html head and css

--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>PitMart</title>
+		<meta content="PitMart - Hypixel Pit trading and stats" property="description" />
+		<meta content="PitMart - Hypixel Pit trading and stats" property="og:description" />
+		<meta content="#00FFFF" name="theme-color" />
 		<meta charset="utf-8" />
+		<meta name="keywords" content="minecraft, hypixel, pit, trading, trade">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta content="https://www.pitmart.net" property="og:url" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
